03Sep01=======================================================================
1. make spot dups look back 5 mins.
2. strip the top off each character in any text field of a Spot for duping.
3. Try to make the routing tables more accurate for users that login to
more than one node.
4. Make PC50s come out in one heap on all channels every 14 mins, instead of
on the 14th minute in the connection time for each channel. This should 
reduce (slightly) the dups that are dumped.
5. Speed up input queue processing (a lot).
6. make set/isolate and acc/route mutually exclusive (and issue appropriate
error messages) and fix set/iso on PC18 input.
7. Improve stat/route_node and stat/route_user for diagnostics.
8. strip top bit of comments in ann/spots.
9. fix the announce filtering problem.
10. Fix the double announcement of node disconnections?
01Sep01=======================================================================
1. Change build number calc (hopefully for the last time)
27Aug01=======================================================================
1. make rej/wwv and rej/wcy work
26Aug01=======================================================================
1. make all newly learned nodes locked out by default.
2. add lock_nodes.pl which locks out all the nodes in the user file whose
privilege is 1 or less and which isn't mentioned as an argument to the 
command on the command line.
3. make set/node, set/spider and their friends unlock a node as well as make
them one. 
4. Make sh/log et al more efficient / less memory hungry (and the display
the correct way round!)
24Aug01=======================================================================
1. Allow badmsg to reject on interface callsign ('I')
20Aug01=======================================================================
1. protect against PC41s with field[3] == field[2]
2. Redo Julian stuff as proper objects
3. Make the various Log display come out forwards instead of backwards