@@ -27,10 +27,7 @@ package DXM;
 				conscript => 'no connect script called \"$_[0]\" found in $main::root/connect',
 				confail => 'connection to $_[0] failed ($_[1])',
 				constart => 'connection to $_[0] started',
-				disc1 => 'Disconnected by $_[0]',
-				disc2 => 'Channel $_[0] disconnected',
-				disc3 => 'No Channel, but connection $_[0] disconnected',
-				disc4 => 'No Channel or connection but orphan $_[0] disconnected',
+				deluser => 'User $_[0] has been deleted',
 				db1 => 'This database is hosted at $_[0]',
 				db2 => 'Sorry, but key: $_[0] was not found in $_[1]',
 				db3 => 'Sorry, database $_[0] doesn\'t exist here',
@@ -43,6 +40,10 @@ package DXM;
 				db10 => '$_[0] records imported into $_[1]',
 				db11 => 'Sending your request(s) to $_[0], please stand by...',
 				dfreq1 => 'Invalid freq $_[0] need: eg 0/30000 or hf or hf/cw', 
+				disc1 => 'Disconnected by $_[0]',
+				disc2 => 'Channel $_[0] disconnected',
+				disc3 => 'No Channel, but connection $_[0] disconnected',
+				disc4 => 'No Channel or connection but orphan $_[0] disconnected',
 				done => 'Done',
 				dup => 'Sorry, this is a duplicate',
 				dx1 => 'Frequency $_[0] not in band (see show/band); usage: DX [BY call] freq call comments',
